Fix board size on mobile with media queries

--- a/style.css
+++ b/style.css
@@ -2,19 +2,28 @@ body {
     --color: hsl(145, 20%, 60%);
     --highlighted-color: hsl(145, 40%, 70%); 
 }
-main {
-    display: flex;
-    justify-content: center;
-}
-main h1 {
+h1 {
     font-size: 50px;
     text-align: center;
 }
 
+main {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-areas: "left right";
+}
+/* For mobile */
+@media only screen and (max-width: 600px) {
+    main {
+        display: block;
+    }
+}
+
 /* SECTION */
 section {
-    text-align: right;
-    margin-right:30px;
+  text-align: right;
+  margin-right:30px;
+  grid-area: left;
 }
 span#score, 
 span#combo {
@@ -29,14 +38,14 @@ button#restart  {
     border-right: 5px solid hsla(0, 0%, 48%, 0.2);
     border-bottom: 5px solid hsla(0, 0%, 48%, 0.2);
 }
- ul.levels {
+ul.levels {
     min-width: 200px;
     max-width: 380px;
-    text-align: left;
+    margin-left: auto;
     border: 1px solid grey;
     padding: 0;
 }
- ul.levels li.level {
+ul.levels li.level {
     background-color: var(--color);
     font-size: 30px;
     text-align: center;
@@ -47,10 +56,18 @@ button#restart  {
     border: 2px solid var(--color);
     z-index: 1;
 }
- ul.levels li.level.locked {
+ul.levels li.level.locked {
     filter: grayscale(100%) brightness(70%);
     opacity: .5;
 }
+
+/* For mobile */
+@media only screen and (max-width: 600px) {
+    ul.levels {
+        max-width: 100%;
+    }
+}
+
 @keyframes unlock {
     0% {
         transform: scale(1);
@@ -70,11 +87,17 @@ button#restart  {
 }
 
 
+/* For mobile */
+@media only screen and (max-width: 600px) {
+	#game-board {
+		aspect-ratio: 1 / 1;
+	}
+}
 /* BOAD and CARDS */
 #game-board {
-    width: 500px;
     border: 1.5px solid gray;
     border-radius: 1px;
+    grid-area: right;
 }
 #cards {
     display: flex;
